# gatbps

./: .gitlab-ci.yml  Building-and-Installation.texi  Building-and-Installing-GATBPS.texi  CC0-1.0-AC-COPYRIGHT.ac  CC0-1.0-AM-COPYRIGHT.am  CC0-1.0-copying.texi  COPYING.bot  COPYING.texi  Copyright-Information.texi  DATE.ac  DATE.sh  INSTALL  INSTALL.bot  INSTALL.texi  Installing-GATBPS.texi  Introduction.texi  Invoking-gatbps.texi  Makefile.am  Makefile.am.vim  Mathematical-Notation-in-Texinfo.texi  NEWS.texi  README.texi  Special-File-Reference.texi  TODO  Using-gatbps.texi  VERSION  VERSION.sh  VERSION.texi.in  VERSION.txi.in  autogen  bdots.texi  bothcontents.texi  configure.ac  gatbps-Asynchronous-Events.texi  gatbps-Consequences-of-Errors.texi  gatbps-DATE  gatbps-Description.texi  gatbps-Environment-Variables.texi  gatbps-Exit-Status.texi  gatbps-Input-Files.texi  (+25 more)
build-aux/: CC0-1.0-AC-COPYRIGHT.ac  CC0-1.0-AM-COPYRIGHT.am  DATE.ac  DATE.sh  GATBPS_CONFIG_FILE_RULES.am  GATBPS_CONFIG_LATER_RULES.am  GATBPS_CP_RULES.am  GATBPS_M4_RULES.am  GATBPS_RECIPE_MARKER.am  GATBPS_VPATH_SEARCH.am  GATBPS_V_NOP.am  GATBPS_V_PAD.am  LTCURRENT.sh  VERSION.ac  VERSION.sh  VERSION_LIBTOOL_C.sh  VERSION_LTCUR.sh  adock  cp.am  docbook-dist.am  docbook.am  dvi-dist.am  echo.sh  gatbps-echo.sh  gatbps-gen-date.sh  gatbps-gen-libtool-c.sh  gatbps-gen-version.sh  gatbps.ac  gatbps.am  html-dist.am  m4.am  pdf-dist.am  plaintext-dist.am  plaintext.am  ps-dist.am  sh-form.sh  texinfo.css  xml-dist.am  xml.am
build-src/: bin_gatbps_src.am  doc_gatbps_TEXINFOS.am
dev-aux/: Makefile.am.vim  XXXX-XX-XX-GATBPS-X-X-X.texi  YYYY-MM-DD-GATBPS-X-Y-Z.texi  configure.ac.vim  format.ac.vim  format.am.vim  gatbps-update.sh  plain-files.mk  special-files.gmk  special-files.mk  special-files.sh
doc/: gatbps.am  gatbps.texi
doc/help/: CC0-1-0-AC-COPYRIGHT-ac-hd.m4  (+306 more)
gh-pages/: index.html
m4/: DEFINE_ADD_A_SHEBANG_TO_GATBPS.m4  DEFINE_ALL.m4  DEFINE_AT.m4  DEFINE_AWK.m4  DEFINE_AWK_SH.m4  DEFINE_EXEEXT.m4  DEFINE_HAVE_SHEBANG.m4  DEFINE_HAVE_SHEBANG_SUPPORT.m4  DEFINE_M4.m4  DEFINE_MAKEINFO.m4  DEFINE_MKDIR_P.m4  DEFINE_SED.m4  DEFINE_SED_SH.m4  DEFINE_SHEBANG_LINE.m4  DEFINE_SHEBANG_LINES.m4  DEFINE_SOFT_INCLUDE.m4  DEFINE_TEXI2ANY.m4  DEFINE_TEXI2DVIFLAGS.m4  DEFINE_docbookdir.m4  DEFINE_enable_SHEBANG.m4  DEFINE_enable_SHEBANG_LINE.m4  DEFINE_enable_SHEBANG_LINES.m4  DEFINE_plaintextdir.m4  DEFINE_xmldir.m4  GATBPS_ARG_ENABLE.m4  GATBPS_ARG_ENABLE_BOOL.m4  GATBPS_CACHE_CHECK.m4  GATBPS_CHECK_BASIC.m4  GATBPS_CHECK_EXEEXT.m4  GATBPS_CHECK_SHEBANG_LINE.m4  GATBPS_CHECK_SOFT_INCLUDE.m4  GATBPS_CHECK_VARS.m4  GATBPS_CONFIG_FILE.m4  GATBPS_CONFIG_FILE_SUBST.m4  GATBPS_CONFIG_LATER.m4  GATBPS_CONFIG_LATER_SUBST.m4  GATBPS_CONFIG_LATER_VAR.m4  GATBPS_CP.m4  GATBPS_CP_SUBST.m4  GATBPS_DEFINE_AT.m4  (+20 more)
src/: CC0-1.0-appendix.texi.m4.in  CC0-1.0-copying.texi.m4.in  GATBPS_ARG_ENABLE_BOOL.m4.m4  GATBPS_ARG_ENABLE_BOOL.m4.m4.in  GATBPS_ARG_WITH_BOOL.m4.m4  GATBPS_ARG_WITH_BOOL.m4.m4.in  GATBPS_CHECK_CFLAG.m4.m4.in  GATBPS_CHECK_COMPILE.m4.m4  GATBPS_CHECK_COMPILE.m4.m4.in  GATBPS_CHECK_HEADER.m4.m4  GATBPS_CHECK_HEADER.m4.m4.in  GATBPS_CHECK_LIB.m4.m4  GATBPS_CHECK_LIB.m4.m4.in  GATBPS_CHECK_LINK.m4.m4  GATBPS_CHECK_LINK.m4.m4.in  GATBPS_CHECK_RUN.m4.m4  GATBPS_CHECK_RUN.m4.m4.in  GATBPS_CHECK_VARS.m4.m4.in  GATBPS_CONFIG_FILE.m4.m4  GATBPS_CONFIG_FILE.m4.m4.in  GATBPS_CONFIG_FILE_SUBST.m4.m4  GATBPS_CONFIG_FILE_SUBST.m4.m4.in  Makefile.am.vim.m4.in  gatbps.in  gatbps.m4  gatbps.m4.in  gatbps.sh.ac  gatbps.sh.m4  mtvskipbot.texi.m4.in  mtvskiptop.texi.m4.in
tsr/: 20150816T032044Z-f905929063710e25869745a6bf9bff2a0c462af5-certum.tsr  20150824T045422Z-043a44ef2fc120e127aae5212a67a466a638910b-certum.tsr  20150824T045423Z-043a44ef2fc120e127aae5212a67a466a638910b-safe-creative.tsr  20150906T050906Z-ce5ec8aa3c6ac5eb15d20ddc32e1f7fbb580bb9e-safe-creative.tsr  20150914T033244Z-1c9ac76a89954f83bf20994438569cf6825e81b8-certum.tsr  20150928T040851Z-beb8b4d76e3c3c86be0361cefe13ce1b9e2c1c92-safe-creative.tsr  20151012T034502Z-24719cd0fe15d161db1bd494209dc273e4f96b33-certum.tsr  20151012T034514Z-24719cd0fe15d161db1bd494209dc273e4f96b33-safecreative.tsr  20151022T025617Z-48334f32b5ce032cc6e2c670d365a6e93878352c-certum.tsr  20151022T025629Z-48334f32b5ce032cc6e2c670d365a6e93878352c-safecreative.tsr  20151102T044819Z-dad1ffe4f129b3602ef85638217996367b365d4a-safe-creative.tsr  20151109T043049Z-53e5ecf01e0529459b813f0f478339a0db906865-safecreative.tsr  20151116T044307Z-4e1f403a3cab414f2b8a9340faa123c2fd1e1217-safe-creative.tsr  20151123T050800Z-f49eab594df86bb140bc6cdba1043ae084b090d0-safe-creative.tsr  20151130T044642Z-d9fd166f03393f83e963f23a2dd9f4d562299a47-safe-creative.tsr  20151207T054111Z-c20e71cbfd2516e7795128a2c59965a8e3e87d2a-safe-creative.tsr  20151214T050943Z-68e31ad73f60170b8b7a5d75ab64d478c7a28a6f-safe-creative.tsr  20151221T053832Z-d738b3ad8f01eac9fc6c0a28b9b59ddc6fd00398-certum.tsr  20151221T053843Z-d738b3ad8f01eac9fc6c0a28b9b59ddc6fd00398-safe-creative.tsr  20151228T054412Z-5d5f19dd143f794072c10a224f75a56cd676a0d7-safecreative.tsr  20160104T044842Z-f0511deb968bc6edd4dcd09570105d230137f2a5-certum.tsr  20160104T044854Z-f0511deb968bc6edd4dcd09570105d230137f2a5-safe-creative.tsr  20160118T032036Z-ba96fc5766e82072dd9ce3b4c590cdaabf5e7838-certum.tsr  20160229T045409Z-e9c1abbff48d4ba1efca6e5a17b3e78f9fe9986e-safecreative.tsr  20160320T044434Z-12cc3d8406d839f9b3a3127b796254c62d2e3149-certum.tsr  20160320T044445Z-12cc3d8406d839f9b3a3127b796254c62d2e3149-safecreative.tsr  20160410T025752Z-f896238b3da79bf324c905c14e8c47662fd70d39-certum.tsr  20160503T031005Z-b3420878b2bcf5d24affc0bfec6b0c9f08c02322-certum.tsr  20160702T043201Z-a7580e19fa021b0fab1de30f7c97c01a41e972b4-certum.tsr  20160711T035941Z-da4afc4bab27633fe590938337f06735c747ba82-certum.tsr  20160804T022234Z-4d0848fcf901f72d079f757581b763ebb2e1346c-certum.tsr  20160826T045345Z-ff4c4accb2e3dc9810d18dcbdf28509424106632-certum.tsr  20160826T045356Z-ff4c4accb2e3dc9810d18dcbdf28509424106632-freetsa.tsr  20160826T045409Z-ff4c4accb2e3dc9810d18dcbdf28509424106632-safecreative.tsr  (+54 more)
(+862 files in other folders)
