## begin_variables

AM_MAKEINFOFLAGS =
AM_MAKEINFOFLAGS += '-I' 'doc/texi' '-I' $(srcdir)'/doc/texi'

AM_MAKEINFOHTMLFLAGS =
AM_MAKEINFOHTMLFLAGS += $(AM_MAKEINFOFLAGS)
AM_MAKEINFOHTMLFLAGS += '--css-include=build-aux/texinfo.css'
AM_MAKEINFOHTMLFLAGS += '--no-headers'
AM_MAKEINFOHTMLFLAGS += '--no-split'
AM_MAKEINFOHTMLFLAGS += '--set-customization-variable' 'TOP_NODE_UP=Top'

AM_TEXI2DVIFLAGS =
AM_TEXI2DVIFLAGS += $(AM_MAKEINFOFLAGS)

CLEANFILES =

DISTCLEANFILES =

EXTRA_DIST =
EXTRA_DIST += $(bin_gatbps_src)
EXTRA_DIST += $(docbook_dist_dst)
EXTRA_DIST += $(dvi_dist_dst)
EXTRA_DIST += $(html_dist_dst)
EXTRA_DIST += $(pdf_dist_dst)
EXTRA_DIST += $(plaintext_dist_dst)
EXTRA_DIST += $(ps_dist_dst)
EXTRA_DIST += AUTHORS
EXTRA_DIST += CC0-1.0.txt
EXTRA_DIST += COPYING
EXTRA_DIST += ChangeLog
EXTRA_DIST += DATE
EXTRA_DIST += INSTALL
EXTRA_DIST += NEWS
EXTRA_DIST += README
EXTRA_DIST += VERSION
EXTRA_DIST += build-aux/DATE.sh
EXTRA_DIST += build-aux/VERSION.sh
EXTRA_DIST += build-aux/sh-form.sh

GATBPS_M4FLAGS =
GATBPS_M4FLAGS += '-I' $(srcdir)

MAINTAINERCLEANFILES =

MOSTLYCLEANFILES =

SUFFIXES =

TEXI2DVI =
TEXI2DVI += 'texi2dvi' $(AM_TEXI2DVIFLAGS) $(TEXI2DVIFLAGS)

bin_SCRIPTS =
bin_SCRIPTS += bin/gatbps

bin_gatbps_src =
bin_gatbps_src += doc/help/CC0-1.0-AC-COPYRIGHT.ac.hd.m4
bin_gatbps_src += doc/help/CC0-1.0-AM-COPYRIGHT.am.hd.m4
bin_gatbps_src += doc/help/CC0-1.0-appendix.texi.hd.m4
bin_gatbps_src += doc/help/CC0-1.0-commit.txt.hd.m4
bin_gatbps_src += doc/help/CC0-1.0-copying.texi.hd.m4
bin_gatbps_src += doc/help/CC0-1.0-file.txt.hd.m4
bin_gatbps_src += doc/help/CC0-1.0.txt.hd.m4
bin_gatbps_src += doc/help/DATE.sh.hd.m4
bin_gatbps_src += doc/help/GATBPS_ARG_ENABLE.m4.hd.m4
bin_gatbps_src += doc/help/GATBPS_ARG_ENABLE_BOOL.m4.hd.m4
bin_gatbps_src += doc/help/GATBPS_ARG_WITH.m4.hd.m4
bin_gatbps_src += doc/help/GATBPS_ARG_WITH_BOOL.m4.hd.m4
bin_gatbps_src += doc/help/GATBPS_CACHE_CHECK.m4.hd.m4
bin_gatbps_src += doc/help/GATBPS_CHECK_BASIC.m4.hd.m4
bin_gatbps_src += doc/help/GATBPS_CHECK_CFLAG.m4.hd.m4
bin_gatbps_src += doc/help/GATBPS_CHECK_COMPILE.m4.hd.m4
bin_gatbps_src += doc/help/GATBPS_CHECK_HEADER.m4.hd.m4
bin_gatbps_src += doc/help/GATBPS_CHECK_LIB.m4.hd.m4
bin_gatbps_src += doc/help/GATBPS_CHECK_LINK.m4.hd.m4
bin_gatbps_src += doc/help/GATBPS_CHECK_RUN.m4.hd.m4
bin_gatbps_src += doc/help/GATBPS_CHECK_SHEBANG_LINE.m4.hd.m4
bin_gatbps_src += doc/help/GATBPS_CHECK_SOFT_INCLUDE.m4.hd.m4
bin_gatbps_src += doc/help/GATBPS_CHECK_VARS.m4.hd.m4
bin_gatbps_src += doc/help/GATBPS_CONFIG_FILE.m4.hd.m4
bin_gatbps_src += doc/help/GATBPS_CONFIG_FILE_RULES.am.hd.m4
bin_gatbps_src += doc/help/GATBPS_CONFIG_FILE_SUBST.m4.hd.m4
bin_gatbps_src += doc/help/GATBPS_CP.m4.hd.m4
bin_gatbps_src += doc/help/GATBPS_CP_RULES.am.hd.m4
bin_gatbps_src += doc/help/GATBPS_CP_SUBST.m4.hd.m4
bin_gatbps_src += doc/help/GATBPS_DEFINE_AT.m4.hd.m4
bin_gatbps_src += doc/help/GATBPS_DEFINE_CLASSPATH.m4.hd.m4
bin_gatbps_src += doc/help/GATBPS_DEFINE_DATE.m4.hd.m4
bin_gatbps_src += doc/help/GATBPS_DEFINE_HARD_INCLUDE.m4.hd.m4
bin_gatbps_src += doc/help/GATBPS_DEFINE_JARFLAGS.m4.hd.m4
bin_gatbps_src += doc/help/GATBPS_DEFINE_JAVACFLAGS.m4.hd.m4
bin_gatbps_src += doc/help/GATBPS_DEFINE_JAVADOCFLAGS.m4.hd.m4
bin_gatbps_src += doc/help/GATBPS_DEFINE_VERSION.m4.hd.m4
bin_gatbps_src += doc/help/GATBPS_DEFINE_enable_SHEBANG_LINES.m4.hd.m4
bin_gatbps_src += doc/help/GATBPS_DEFINE_javadir.m4.hd.m4
bin_gatbps_src += doc/help/GATBPS_GIT_CLONE_RULES.am.hd.m4
bin_gatbps_src += doc/help/GATBPS_GIT_CLONE_SUBST.m4.hd.m4
bin_gatbps_src += doc/help/GATBPS_JAVA.m4.hd.m4
bin_gatbps_src += doc/help/GATBPS_JAVA_RULES.am.hd.m4
bin_gatbps_src += doc/help/GATBPS_JAVA_SUBST.m4.hd.m4
bin_gatbps_src += doc/help/GATBPS_M4.m4.hd.m4
bin_gatbps_src += doc/help/GATBPS_M4_RULES.am.hd.m4
bin_gatbps_src += doc/help/GATBPS_M4_SUBST.m4.hd.m4
bin_gatbps_src += doc/help/GATBPS_MSG_ERROR.m4.hd.m4
bin_gatbps_src += doc/help/GATBPS_MSG_FAILURE.m4.hd.m4
bin_gatbps_src += doc/help/GATBPS_MSG_NOTICE.m4.hd.m4
bin_gatbps_src += doc/help/GATBPS_MSG_WARN.m4.hd.m4
bin_gatbps_src += doc/help/GATBPS_PROG_AWK.m4.hd.m4
bin_gatbps_src += doc/help/GATBPS_PROG_DOCKER.m4.hd.m4
bin_gatbps_src += doc/help/GATBPS_PROG_DOXYGEN.m4.hd.m4
bin_gatbps_src += doc/help/GATBPS_PROG_GIT.m4.hd.m4
bin_gatbps_src += doc/help/GATBPS_PROG_GZIP.m4.hd.m4
bin_gatbps_src += doc/help/GATBPS_PROG_JAR.m4.hd.m4
bin_gatbps_src += doc/help/GATBPS_PROG_JAVAC.m4.hd.m4
bin_gatbps_src += doc/help/GATBPS_PROG_JAVADOC.m4.hd.m4
bin_gatbps_src += doc/help/GATBPS_PROG_M4.m4.hd.m4
bin_gatbps_src += doc/help/GATBPS_PROG_MAKEINFO.m4.hd.m4
bin_gatbps_src += doc/help/GATBPS_PROG_MKDIR_P.m4.hd.m4
bin_gatbps_src += doc/help/GATBPS_PROG_SED.m4.hd.m4
bin_gatbps_src += doc/help/GATBPS_PROG_TAR.m4.hd.m4
bin_gatbps_src += doc/help/GATBPS_PROG_TEXI2ANY.m4.hd.m4
bin_gatbps_src += doc/help/GATBPS_PROG_WGET.m4.hd.m4
bin_gatbps_src += doc/help/GATBPS_PROG_XZ.m4.hd.m4
bin_gatbps_src += doc/help/GATBPS_WGET_RULES.am.hd.m4
bin_gatbps_src += doc/help/GATBPS_WGET_SUBST.m4.hd.m4
bin_gatbps_src += doc/help/INPUT_FILTER.sh.in.hd.m4
bin_gatbps_src += doc/help/Makefile.am.vim.hd.m4
bin_gatbps_src += doc/help/PACKAGEDATE.texi.in.hd.m4
bin_gatbps_src += doc/help/PACKAGEVERSION.texi.in.hd.m4
bin_gatbps_src += doc/help/PACKAGE_STRING.df.in.hd.m4
bin_gatbps_src += doc/help/PACKAGE_VERSION.df.in.hd.m4
bin_gatbps_src += doc/help/TEST_EXIT.h.hd.m4
bin_gatbps_src += doc/help/VERSION.sh.hd.m4
bin_gatbps_src += doc/help/VERSION_LTCUR.sh.hd.m4
bin_gatbps_src += doc/help/awk-form.sh.hd.m4
bin_gatbps_src += doc/help/bdots.texi.hd.m4
bin_gatbps_src += doc/help/bothcontents.texi.hd.m4
bin_gatbps_src += doc/help/configure.ac.vim.hd.m4
bin_gatbps_src += doc/help/contents.texi.hd.m4
bin_gatbps_src += doc/help/cp.am.hd.m4
bin_gatbps_src += doc/help/docbook-dist.am.hd.m4
bin_gatbps_src += doc/help/docbook.am.hd.m4
bin_gatbps_src += doc/help/doxygen-dist.am.hd.m4
bin_gatbps_src += doc/help/doxygen.am.hd.m4
bin_gatbps_src += doc/help/dslash.texi.hd.m4
bin_gatbps_src += doc/help/dvi-dist.am.hd.m4
bin_gatbps_src += doc/help/echo.sh.hd.m4
bin_gatbps_src += doc/help/gatbps_fatal.m4.hd.m4
bin_gatbps_src += doc/help/gatbps_notice.m4.hd.m4
bin_gatbps_src += doc/help/gequ.texi.hd.m4
bin_gatbps_src += doc/help/git.am.hd.m4
bin_gatbps_src += doc/help/gzip.am.hd.m4
bin_gatbps_src += doc/help/html-dist.am.hd.m4
bin_gatbps_src += doc/help/indent.texi.hd.m4
bin_gatbps_src += doc/help/ipez.texi.hd.m4
bin_gatbps_src += doc/help/java-dist.am.hd.m4
bin_gatbps_src += doc/help/java.am.hd.m4
bin_gatbps_src += doc/help/javadoc-dist.am.hd.m4
bin_gatbps_src += doc/help/javadoc.am.hd.m4
bin_gatbps_src += doc/help/lcei.texi.hd.m4
bin_gatbps_src += doc/help/lequ.texi.hd.m4
bin_gatbps_src += doc/help/lflo.texi.hd.m4
bin_gatbps_src += doc/help/m4.am.hd.m4
bin_gatbps_src += doc/help/math.texi.hd.m4
bin_gatbps_src += doc/help/mdot.texi.hd.m4
bin_gatbps_src += doc/help/mdots.texi.hd.m4
bin_gatbps_src += doc/help/msign.texi.hd.m4
bin_gatbps_src += doc/help/mtvskipbot.texi.hd.m4
bin_gatbps_src += doc/help/mtvskiptop.texi.hd.m4
bin_gatbps_src += doc/help/nequ.texi.hd.m4
bin_gatbps_src += doc/help/pdf-dist.am.hd.m4
bin_gatbps_src += doc/help/plaintext-dist.am.hd.m4
bin_gatbps_src += doc/help/plaintext.am.hd.m4
bin_gatbps_src += doc/help/prm.texi.hd.m4
bin_gatbps_src += doc/help/ps-dist.am.hd.m4
bin_gatbps_src += doc/help/rarrow.texi.hd.m4
bin_gatbps_src += doc/help/rcei.texi.hd.m4
bin_gatbps_src += doc/help/rflo.texi.hd.m4
bin_gatbps_src += doc/help/rules_code.m4.hd.m4
bin_gatbps_src += doc/help/sbs.texi.hd.m4
bin_gatbps_src += doc/help/sh-form.sh.hd.m4
bin_gatbps_src += doc/help/shortcontents.texi.hd.m4
bin_gatbps_src += doc/help/sps.texi.hd.m4
bin_gatbps_src += doc/help/tar.am.hd.m4
bin_gatbps_src += doc/help/texi-form.sh.hd.m4
bin_gatbps_src += doc/help/texinfo.css.hd.m4
bin_gatbps_src += doc/help/troff-form.sh.hd.m4
bin_gatbps_src += doc/help/wget.am.hd.m4
bin_gatbps_src += doc/help/xml-dist.am.hd.m4
bin_gatbps_src += doc/help/xml.am.hd.m4
bin_gatbps_src += doc/help/xz.am.hd.m4
bin_gatbps_src += doc/man/gatbps.1.m4
bin_gatbps_src += src/files/CC0-1.0-AC-COPYRIGHT.ac.m4
bin_gatbps_src += src/files/CC0-1.0-AM-COPYRIGHT.am.m4
bin_gatbps_src += src/files/CC0-1.0-appendix.texi.m4
bin_gatbps_src += src/files/CC0-1.0-commit.txt.m4
bin_gatbps_src += src/files/CC0-1.0-copying.texi.m4
bin_gatbps_src += src/files/CC0-1.0-file.txt.m4
bin_gatbps_src += src/files/CC0-1.0.txt.m4
bin_gatbps_src += src/files/DATE.sh.m4
bin_gatbps_src += src/files/GATBPS_ARG_ENABLE.m4.m4
bin_gatbps_src += src/files/GATBPS_ARG_ENABLE_BOOL.m4.m4
bin_gatbps_src += src/files/GATBPS_ARG_WITH.m4.m4
bin_gatbps_src += src/files/GATBPS_ARG_WITH_BOOL.m4.m4
bin_gatbps_src += src/files/GATBPS_CACHE_CHECK.m4.m4
bin_gatbps_src += src/files/GATBPS_CHECK_BASIC.m4.m4
bin_gatbps_src += src/files/GATBPS_CHECK_CFLAG.m4.m4
bin_gatbps_src += src/files/GATBPS_CHECK_COMPILE.m4.m4
bin_gatbps_src += src/files/GATBPS_CHECK_HEADER.m4.m4
bin_gatbps_src += src/files/GATBPS_CHECK_LIB.m4.m4
bin_gatbps_src += src/files/GATBPS_CHECK_LINK.m4.m4
bin_gatbps_src += src/files/GATBPS_CHECK_RUN.m4.m4
bin_gatbps_src += src/files/GATBPS_CHECK_SHEBANG_LINE.m4.m4
bin_gatbps_src += src/files/GATBPS_CHECK_SOFT_INCLUDE.m4.m4
bin_gatbps_src += src/files/GATBPS_CHECK_VARS.m4.m4
bin_gatbps_src += src/files/GATBPS_CONFIG_FILE.m4.m4
bin_gatbps_src += src/files/GATBPS_CONFIG_FILE_RULES.am.m4
bin_gatbps_src += src/files/GATBPS_CONFIG_FILE_SUBST.m4.m4
bin_gatbps_src += src/files/GATBPS_CP.m4.m4
bin_gatbps_src += src/files/GATBPS_CP_RULES.am.m4
bin_gatbps_src += src/files/GATBPS_CP_SUBST.m4.m4
bin_gatbps_src += src/files/GATBPS_DEFINE_AT.m4.m4
bin_gatbps_src += src/files/GATBPS_DEFINE_CLASSPATH.m4.m4
bin_gatbps_src += src/files/GATBPS_DEFINE_DATE.m4.m4
bin_gatbps_src += src/files/GATBPS_DEFINE_HARD_INCLUDE.m4.m4
bin_gatbps_src += src/files/GATBPS_DEFINE_JARFLAGS.m4.m4
bin_gatbps_src += src/files/GATBPS_DEFINE_JAVACFLAGS.m4.m4
bin_gatbps_src += src/files/GATBPS_DEFINE_JAVADOCFLAGS.m4.m4
bin_gatbps_src += src/files/GATBPS_DEFINE_VERSION.m4.m4
bin_gatbps_src += src/files/GATBPS_DEFINE_enable_SHEBANG_LINES.m4.m4
bin_gatbps_src += src/files/GATBPS_DEFINE_javadir.m4.m4
bin_gatbps_src += src/files/GATBPS_GIT_CLONE_RULES.am.m4
bin_gatbps_src += src/files/GATBPS_GIT_CLONE_SUBST.m4.m4
bin_gatbps_src += src/files/GATBPS_JAVA.m4.m4
bin_gatbps_src += src/files/GATBPS_JAVA_RULES.am.m4
bin_gatbps_src += src/files/GATBPS_JAVA_SUBST.m4.m4
bin_gatbps_src += src/files/GATBPS_M4.m4.m4
bin_gatbps_src += src/files/GATBPS_M4_RULES.am.m4
bin_gatbps_src += src/files/GATBPS_M4_SUBST.m4.m4
bin_gatbps_src += src/files/GATBPS_MSG_ERROR.m4.m4
bin_gatbps_src += src/files/GATBPS_MSG_FAILURE.m4.m4
bin_gatbps_src += src/files/GATBPS_MSG_NOTICE.m4.m4
bin_gatbps_src += src/files/GATBPS_MSG_WARN.m4.m4
bin_gatbps_src += src/files/GATBPS_PROG_AWK.m4.m4
bin_gatbps_src += src/files/GATBPS_PROG_DOCKER.m4.m4
bin_gatbps_src += src/files/GATBPS_PROG_DOXYGEN.m4.m4
bin_gatbps_src += src/files/GATBPS_PROG_GIT.m4.m4
bin_gatbps_src += src/files/GATBPS_PROG_GZIP.m4.m4
bin_gatbps_src += src/files/GATBPS_PROG_JAR.m4.m4
bin_gatbps_src += src/files/GATBPS_PROG_JAVAC.m4.m4
bin_gatbps_src += src/files/GATBPS_PROG_JAVADOC.m4.m4
bin_gatbps_src += src/files/GATBPS_PROG_M4.m4.m4
bin_gatbps_src += src/files/GATBPS_PROG_MAKEINFO.m4.m4
bin_gatbps_src += src/files/GATBPS_PROG_MKDIR_P.m4.m4
bin_gatbps_src += src/files/GATBPS_PROG_SED.m4.m4
bin_gatbps_src += src/files/GATBPS_PROG_TAR.m4.m4
bin_gatbps_src += src/files/GATBPS_PROG_TEXI2ANY.m4.m4
bin_gatbps_src += src/files/GATBPS_PROG_WGET.m4.m4
bin_gatbps_src += src/files/GATBPS_PROG_XZ.m4.m4
bin_gatbps_src += src/files/GATBPS_WGET_RULES.am.m4
bin_gatbps_src += src/files/GATBPS_WGET_SUBST.m4.m4
bin_gatbps_src += src/files/INPUT_FILTER.sh.in.m4
bin_gatbps_src += src/files/Makefile.am.vim.m4
bin_gatbps_src += src/files/PACKAGEDATE.texi.in.m4
bin_gatbps_src += src/files/PACKAGEVERSION.texi.in.m4
bin_gatbps_src += src/files/PACKAGE_STRING.df.in.m4
bin_gatbps_src += src/files/PACKAGE_VERSION.df.in.m4
bin_gatbps_src += src/files/TEST_EXIT.h.m4
bin_gatbps_src += src/files/VERSION.sh.m4
bin_gatbps_src += src/files/VERSION_LTCUR.sh.m4
bin_gatbps_src += src/files/awk-form.sh.m4
bin_gatbps_src += src/files/bdots.texi.m4
bin_gatbps_src += src/files/bothcontents.texi.m4
bin_gatbps_src += src/files/configure.ac.vim.m4
bin_gatbps_src += src/files/contents.texi.m4
bin_gatbps_src += src/files/cp.am.m4
bin_gatbps_src += src/files/docbook-dist.am.m4
bin_gatbps_src += src/files/docbook.am.m4
bin_gatbps_src += src/files/doxygen-dist.am.m4
bin_gatbps_src += src/files/doxygen.am.m4
bin_gatbps_src += src/files/dslash.texi.m4
bin_gatbps_src += src/files/dvi-dist.am.m4
bin_gatbps_src += src/files/echo.sh.m4
bin_gatbps_src += src/files/gatbps_fatal.m4.m4
bin_gatbps_src += src/files/gatbps_notice.m4.m4
bin_gatbps_src += src/files/gequ.texi.m4
bin_gatbps_src += src/files/git.am.m4
bin_gatbps_src += src/files/gzip.am.m4
bin_gatbps_src += src/files/html-dist.am.m4
bin_gatbps_src += src/files/indent.texi.m4
bin_gatbps_src += src/files/ipez.texi.m4
bin_gatbps_src += src/files/java-dist.am.m4
bin_gatbps_src += src/files/java.am.m4
bin_gatbps_src += src/files/javadoc-dist.am.m4
bin_gatbps_src += src/files/javadoc.am.m4
bin_gatbps_src += src/files/lcei.texi.m4
bin_gatbps_src += src/files/lequ.texi.m4
bin_gatbps_src += src/files/lflo.texi.m4
bin_gatbps_src += src/files/m4.am.m4
bin_gatbps_src += src/files/math.texi.m4
bin_gatbps_src += src/files/mdot.texi.m4
bin_gatbps_src += src/files/mdots.texi.m4
bin_gatbps_src += src/files/msign.texi.m4
bin_gatbps_src += src/files/mtvskipbot.texi.m4
bin_gatbps_src += src/files/mtvskiptop.texi.m4
bin_gatbps_src += src/files/nequ.texi.m4
bin_gatbps_src += src/files/pdf-dist.am.m4
bin_gatbps_src += src/files/plaintext-dist.am.m4
bin_gatbps_src += src/files/plaintext.am.m4
bin_gatbps_src += src/files/prm.texi.m4
bin_gatbps_src += src/files/ps-dist.am.m4
bin_gatbps_src += src/files/rarrow.texi.m4
bin_gatbps_src += src/files/rcei.texi.m4
bin_gatbps_src += src/files/rflo.texi.m4
bin_gatbps_src += src/files/rules_code.m4.m4
bin_gatbps_src += src/files/sbs.texi.m4
bin_gatbps_src += src/files/sh-form.sh.m4
bin_gatbps_src += src/files/shortcontents.texi.m4
bin_gatbps_src += src/files/sps.texi.m4
bin_gatbps_src += src/files/tar.am.m4
bin_gatbps_src += src/files/texi-form.sh.m4
bin_gatbps_src += src/files/texinfo.css.m4
bin_gatbps_src += src/files/troff-form.sh.m4
bin_gatbps_src += src/files/wget.am.m4
bin_gatbps_src += src/files/xml-dist.am.m4
bin_gatbps_src += src/files/xml.am.m4
bin_gatbps_src += src/files/xz.am.m4
bin_gatbps_src += src/gatbps.m4
bin_gatbps_src += src/tools/contains_at_least_one_word.m4
bin_gatbps_src += src/tools/contains_at_least_one_word_sh.m4
bin_gatbps_src += src/tools/contains_exactly_one_word.m4
bin_gatbps_src += src/tools/contains_exactly_one_word_sh.m4
bin_gatbps_src += src/tools/footer_comment.m4
bin_gatbps_src += src/tools/generation_code.m4
bin_gatbps_src += src/tools/header_comment.m4
bin_gatbps_src += src/tools/help_code.m4
bin_gatbps_src += src/tools/math_symbol.m4
bin_gatbps_src += src/tools/recursion_code.m4
bin_gatbps_src += src/tools/rules_code.m4
bin_gatbps_src += src/tools/substitution_comment_plural.m4
bin_gatbps_src += src/tools/substitution_comment_singular.m4

doc_gatbps_TEXINFOS =
doc_gatbps_TEXINFOS += build-aux/texinfo.css
doc_gatbps_TEXINFOS += doc/texi/AWKDEFAULTTEXI.texi
doc_gatbps_TEXINFOS += doc/texi/Automatic-Dependency-Tracking-for-M4-Code.texi
doc_gatbps_TEXINFOS += doc/texi/Build-System-Initialization.texi
doc_gatbps_TEXINFOS += doc/texi/Building-and-Installation.texi
doc_gatbps_TEXINFOS += doc/texi/Building.texi
doc_gatbps_TEXINFOS += doc/texi/CC0-1.0-appendix.texi
doc_gatbps_TEXINFOS += doc/texi/CC0-1.0-copying.texi
doc_gatbps_TEXINFOS += doc/texi/Compiling-Java-with-the-Autotools.texi
doc_gatbps_TEXINFOS += doc/texi/Configuration.texi
doc_gatbps_TEXINFOS += doc/texi/Copyright-Information.texi
doc_gatbps_TEXINFOS += doc/texi/Copyright-Texts.texi
doc_gatbps_TEXINFOS += doc/texi/Formatting-Autoconf-Files.texi
doc_gatbps_TEXINFOS += doc/texi/Formatting-Automake-Files.texi
doc_gatbps_TEXINFOS += doc/texi/Formatting-Automake-Include-Sections.texi
doc_gatbps_TEXINFOS += doc/texi/Formatting-Automake-Rule-Sections.texi
doc_gatbps_TEXINFOS += doc/texi/Formatting-Automake-Variable-Sections.texi
doc_gatbps_TEXINFOS += doc/texi/Generating-Javadoc-with-the-Autotools.texi
doc_gatbps_TEXINFOS += doc/texi/Installation.texi
doc_gatbps_TEXINFOS += doc/texi/Introduction.texi
doc_gatbps_TEXINFOS += doc/texi/Invoking-awk-form-sh.texi
doc_gatbps_TEXINFOS += doc/texi/Invoking-gatbps.texi
doc_gatbps_TEXINFOS += doc/texi/Invoking-sh-form-sh.texi
doc_gatbps_TEXINFOS += doc/texi/Invoking-texi-form-sh.texi
doc_gatbps_TEXINFOS += doc/texi/Invoking-troff-form-sh.texi
doc_gatbps_TEXINFOS += doc/texi/Mathematical-Notation-in-Texinfo.texi
doc_gatbps_TEXINFOS += doc/texi/PACKAGEDATE.texi
doc_gatbps_TEXINFOS += doc/texi/PACKAGEVERSION.texi
doc_gatbps_TEXINFOS += doc/texi/Package-Formats.texi
doc_gatbps_TEXINFOS += doc/texi/Plain-Files.texi
doc_gatbps_TEXINFOS += doc/texi/Processing-M4-with-the-Autotools.texi
doc_gatbps_TEXINFOS += doc/texi/Release-Notes.texi
doc_gatbps_TEXINFOS += doc/texi/Required-Packages.texi
doc_gatbps_TEXINFOS += doc/texi/SEDDEFAULTTEXI.texi
doc_gatbps_TEXINFOS += doc/texi/Special-File-Reference.texi
doc_gatbps_TEXINFOS += doc/texi/TEXIANYDEFAULTTEXI.texi
doc_gatbps_TEXINFOS += doc/texi/Timestamp-Preservation-during-Autoconf-Instantiation.texi
doc_gatbps_TEXINFOS += doc/texi/Writing-Mathematical-Expressions-Twice.texi
doc_gatbps_TEXINFOS += doc/texi/YYYY-MM-DD-GATBPS-0-1-0.texi
doc_gatbps_TEXINFOS += doc/texi/bdots.texi
doc_gatbps_TEXINFOS += doc/texi/bothcontents.texi
doc_gatbps_TEXINFOS += doc/texi/dslash.texi
doc_gatbps_TEXINFOS += doc/texi/gatbps-Asynchronous-Events.texi
doc_gatbps_TEXINFOS += doc/texi/gatbps-Consequences-of-Errors.texi
doc_gatbps_TEXINFOS += doc/texi/gatbps-Description.texi
doc_gatbps_TEXINFOS += doc/texi/gatbps-Environment-Variables.texi
doc_gatbps_TEXINFOS += doc/texi/gatbps-Exit-Status.texi
doc_gatbps_TEXINFOS += doc/texi/gatbps-Input-Files.texi
doc_gatbps_TEXINFOS += doc/texi/gatbps-Operands.texi
doc_gatbps_TEXINFOS += doc/texi/gatbps-Options.texi
doc_gatbps_TEXINFOS += doc/texi/gatbps-Output-Files.texi
doc_gatbps_TEXINFOS += doc/texi/gatbps-Standard-Error.texi
doc_gatbps_TEXINFOS += doc/texi/gatbps-Standard-Input.texi
doc_gatbps_TEXINFOS += doc/texi/gatbps-Standard-Output.texi
doc_gatbps_TEXINFOS += doc/texi/gatbps-Synopsis.texi
doc_gatbps_TEXINFOS += doc/texi/gequ.texi
doc_gatbps_TEXINFOS += doc/texi/indent.texi
doc_gatbps_TEXINFOS += doc/texi/ipez.texi
doc_gatbps_TEXINFOS += doc/texi/lcei.texi
doc_gatbps_TEXINFOS += doc/texi/lequ.texi
doc_gatbps_TEXINFOS += doc/texi/lflo.texi
doc_gatbps_TEXINFOS += doc/texi/math.texi
doc_gatbps_TEXINFOS += doc/texi/mdot.texi
doc_gatbps_TEXINFOS += doc/texi/mdots.texi
doc_gatbps_TEXINFOS += doc/texi/msign.texi
doc_gatbps_TEXINFOS += doc/texi/mtvskipbot.texi
doc_gatbps_TEXINFOS += doc/texi/mtvskiptop.texi
doc_gatbps_TEXINFOS += doc/texi/nequ.texi
doc_gatbps_TEXINFOS += doc/texi/prm.texi
doc_gatbps_TEXINFOS += doc/texi/rarrow.texi
doc_gatbps_TEXINFOS += doc/texi/rcei.texi
doc_gatbps_TEXINFOS += doc/texi/rflo.texi
doc_gatbps_TEXINFOS += doc/texi/sbs.texi
doc_gatbps_TEXINFOS += doc/texi/sps.texi

docbook_dep =
docbook_dep += $(doc_gatbps_TEXINFOS)

docbook_dist_dep =
docbook_dist_dep += $(doc_gatbps_TEXINFOS)
docbook_dist_dep += doc/gatbps.texi

docbook_dist_dst =
docbook_dist_dst += doc/gatbps-$(PACKAGE_VERSION).xml

docbook_dist_src =
docbook_dist_src += doc/gatbps.xml

docbook_dst =
docbook_dst += doc/gatbps.xml

docbook_src =
docbook_src += doc/gatbps.texi

docbookdir =
docbookdir += $(docdir)

dvi_dist_dep =
dvi_dist_dep += $(doc_gatbps_TEXINFOS)
dvi_dist_dep += doc/gatbps.texi

dvi_dist_dst =
dvi_dist_dst += doc/gatbps-$(PACKAGE_VERSION).dvi

dvi_dist_src =
dvi_dist_src += doc/gatbps.dvi

html_dist_dep =
html_dist_dep += $(doc_gatbps_TEXINFOS)
html_dist_dep += doc/gatbps.texi

html_dist_dst =
html_dist_dst += doc/gatbps-$(PACKAGE_VERSION).html

html_dist_src =
html_dist_src += doc/gatbps.html

info_TEXINFOS =
info_TEXINFOS += doc/gatbps.texi

man_MANS =
man_MANS += doc/man/gatbps.1

nodist_bin_gatbps_src =
nodist_bin_gatbps_src += src/tools/AWK_DEFAULT_SH.m4
nodist_bin_gatbps_src += src/tools/AWK_DEFAULT_TROFF.m4
nodist_bin_gatbps_src += src/tools/PACKAGE_DATE.m4
nodist_bin_gatbps_src += src/tools/PACKAGE_DATE_TROFF.m4
nodist_bin_gatbps_src += src/tools/PACKAGE_VERSION.m4
nodist_bin_gatbps_src += src/tools/SED_DEFAULT_SH.m4
nodist_bin_gatbps_src += src/tools/SED_DEFAULT_TROFF.m4
nodist_bin_gatbps_src += src/tools/SHEBANG_LINE.m4
nodist_bin_gatbps_src += src/tools/TEXI2ANY_DEFAULT_SH.m4
nodist_bin_gatbps_src += src/tools/TEXI2ANY_DEFAULT_TROFF.m4

pdf_dist_dep =
pdf_dist_dep += $(doc_gatbps_TEXINFOS)
pdf_dist_dep += doc/gatbps.texi

pdf_dist_dst =
pdf_dist_dst += doc/gatbps-$(PACKAGE_VERSION).pdf

pdf_dist_src =
pdf_dist_src += doc/gatbps.pdf

plaintext_dep =
plaintext_dep += $(doc_gatbps_TEXINFOS)

plaintext_dist_dep =
plaintext_dist_dep += $(doc_gatbps_TEXINFOS)
plaintext_dist_dep += doc/gatbps.texi

plaintext_dist_dst =
plaintext_dist_dst += doc/gatbps-$(PACKAGE_VERSION).txt

plaintext_dist_src =
plaintext_dist_src += doc/gatbps.txt

plaintext_dst =
plaintext_dst += doc/gatbps.txt

plaintext_src =
plaintext_src += doc/gatbps.texi

plaintextdir =
plaintextdir += $(docdir)

ps_dist_dep =
ps_dist_dep += $(doc_gatbps_TEXINFOS)
ps_dist_dep += doc/gatbps.texi

ps_dist_dst =
ps_dist_dst += doc/gatbps-$(PACKAGE_VERSION).ps

ps_dist_src =
ps_dist_src += doc/gatbps.ps

## end_variables

## begin_rules

## end_rules

## begin_includes

include $(srcdir)/build-aux/GATBPS_CONFIG_FILE_RULES.am
include $(srcdir)/build-aux/GATBPS_CP_RULES.am
include $(srcdir)/build-aux/GATBPS_M4_RULES.am
include $(srcdir)/build-aux/cp.am
include $(srcdir)/build-aux/docbook-dist.am
include $(srcdir)/build-aux/docbook.am
include $(srcdir)/build-aux/dvi-dist.am
include $(srcdir)/build-aux/html-dist.am
include $(srcdir)/build-aux/m4.am
include $(srcdir)/build-aux/pdf-dist.am
include $(srcdir)/build-aux/plaintext-dist.am
include $(srcdir)/build-aux/plaintext.am
include $(srcdir)/build-aux/ps-dist.am

## end_includes

include $(srcdir)/build-aux/CC0-1.0-AM-COPYRIGHT.am

##
## The authors of this file have waived all copyright and
## related or neighboring rights to the extent permitted by
## law as described by the CC0 1.0 Universal Public Domain
## Dedication. You should have received a copy of the full
## dedication along with this file, typically as a file
## named <CC0-1.0.txt>. If not, it may be available at
## <https://creativecommons.org/publicdomain/zero/1.0/>.
##
